# git-change-detection

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/git_change_detection/: __init__.py  cli.py  detector.py
